Fix. Missing margin in trophy.

--- a/wiki/src/install/inc/stylesheets/steps.css
+++ b/wiki/src/install/inc/stylesheets/steps.css
@@ -98,6 +98,13 @@ div.trophy p {
   font-weight: 200;
 }
 
+.trophy img {
+  margin: 10px;
+}
+
+
+
+
 /* more room for the state */
 .state-image {
   margin-top: 0px;
